--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
     "dotenv": "^10.0.0",
     "firebase": "^8.7.0",
+    "googleapis": "^80.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "react-youtube": "^7.13.1",
+    "web-vitals": "^1.1.2",
+    "youtube-api-search": "0.0.5",
+    "youtube-search": "^1.1.6"
   },
   "scripts": {
     "start": "react-scripts start",
