--- a/package.json
+++ b/package.json
@@ -9,16 +9,14 @@
     "axios": "^0.21.1",
     "dotenv": "^10.0.0",
     "firebase": "^8.7.0",
-    "googleapis": "^80.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-youtube": "^7.13.1",
-    "web-vitals": "^1.1.2",
-    "youtube-api-search": "0.0.5",
-    "youtube-search": "^1.1.6"
+    "react-youtube-playlist": "^2.2.8",
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
