프로필변경 취소 버튼 수정

--- a/package.json
+++ b/package.json
@@ -44,5 +44,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://lmotp.github.io/idol/"
+  "homepage": "https://lmotp.github.io/books/"
 }
